# Phylactery

./: .eslintrc.yml  .prettierrc.js  README.md  jest.config.ts  package.json  tsconfig.json  vite.config.ts
.husky/: pre-commit
docs/: functions.md  impl.md
src/: main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/__tests__/: first.test.ts
src/core/navigation/routers/: root.tsx
src/core/sql/: connector.ts
src/hooks/: useNative.hook.ts  useNav.hook.ts
src/modules/app/: App.tsx
src/modules/app/pages/MainPage/: main_page.page.tsx  main_page.state.ts
src/types/: cargo.ts  nav.ts
